--- a/css/style.css
+++ b/css/style.css
@@ -223,18 +223,16 @@ img {
   flex-wrap: wrap;
 }
 
-.beneficio-item {
+.beneficio-item dt {
   flex: 1 2 400px;
   margin: 20px 10px;
-}
-
-.beneficio-item h2 {
   font-size: 1.75em;
   color: #8b6b6b;
   margin-bottom: 0.25em;
+  cursor: pointer;
 }
 
-.beneficio-item h2::before {
+.beneficio-item dt::before {
   content: "";
   display: inline-block;
   width: 20px;
@@ -244,12 +242,15 @@ img {
   background-color: #ebb3b3;
 }
 
-.beneficio-item p {
+.beneficio-item dd {
   color: #5a5a5a;
   font-size: 1.25em;
   line-height: 1.4;
 }
 
+.beneficio-item dd:last-child {
+  margin-bottom: 60px;
+}
 /*Footer*/
 
 .footer-bg {
@@ -267,4 +268,33 @@ img {
 .footer p {
   font-size: 1.25em;
   color: #8b6b6b;
+}
+
+.js .js-accordion dd {
+  display: none;
+}
+
+.js-accordion dt::after {
+  content: "🠻";
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+  content: "🠹";
+}
+
+.js-accordion dd.ativo {
+  display: block;
+  animation: slideDown .5 forwards;
+}
+
+@keyframes slidDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    opacity: 1;
+    max-height: 200px;
+  }
 }
